# summer-player

./: .gitignore  BUILD.md  Cargo.toml  INTEGRATION_COMPLETE.md  LICENSE  PLAYLIST_USAGE.md  README.md  summer-player.desktop
.github/workflows/: release.yml
examples/: animation_demo.rs  view_switch_test.rs
locales/: app.yml
src/: config.rs  error.rs  lib.rs  lyrics.rs  main.rs  playlist.rs  utils.rs
src/audio/: decoder.rs  device.rs  file.rs  mod.rs  playback.rs  stream.rs
src/ui/: animation.rs  app.rs  components.rs  messages.rs  mod.rs  theme.rs
src/ui/widgets/: icon_button.rs  mod.rs  playlist_card.rs  playlist_create_card.rs  styled_button.rs  styled_container.rs  styled_text.rs
