[package]
name = "summer_player"
version = "0.4.2"
edition = "2021"
description = "A summer-themed audio player with progress display, playback controls, and lyrics support"
authors = ["xml <xiamengliang@gmail.com>"]
license = "MIT"
readme = "README.md"

[lib]
name = "summer_player"
path = "src/lib.rs"

[[bin]]
name = "summer_player"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
cpal = "0.15.0"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "flac", "ogg", "wav"] }
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["tokio", "advanced", "image", "svg"] }
tokio = { version = "1.0", features = ["full"] }
rfd = "0.14"
rust-i18n = "3"
sys-locale = "0.3.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[package.metadata.deb]
maintainer = "xml <xiamengliang@gmail.com>"
copyright = "2025, xml <xiamengliang@gmail.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
Summer Player 是一个使用 Rust 编写的现代化图形界面音频播放器，\
带有夏日主题，使用 iced GUI 框架构建。支持多种音频格式，\
包括 MP3、FLAC、WAV、OGG、AAC、M4A 等，具有播放列表支持、\
歌词显示、音量控制等功能。"""
depends = "$auto"
section = "sound"
priority = "optional"
assets = [
    ["target/release/summer_player", "usr/bin/", "755"],
    ["icon.png", "usr/share/pixmaps/summer-player.png", "644"],
    ["summer-player.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/summer-player/", "644"],
]

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN"]

# The default locale, default: "en".
# default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
# load-path = "locales"
